<resources>
    <string name="app_name">Latihan3 Activity Monitoring</string>
    <string name="welcome_message">Monitory Membantu Anda Mengontrol HP Anak</string>
    <string name="vc_aggreement_text">Dengan menekan tombol masuk berarti Anda menyetujui <b>Ketentuan Pengguna</b> dan <b>Kebijakan Data</b> kami</string>

    <string name="finish_text_message">
        Beres! Sekarang %s udah bisa ngecek penggunaan HP mu tiap hari buat bantu kamu ngatur waktu :)
    </string>

    <string name="oke">Oke</string>
    <string name="next">Selanjutnya</string>
    <string name="field_ex_age">Contoh: 12</string>
    <string name="field_age">Umur Kamu</string>
    <string name="field_ex_name">Contoh: Budi</string>
    <string name="field_name">Nama Panggilan Kamu</string>

    <string name="vc_kk">Kode Keluarga</string>
    <string name="vc_subtitle">Ketikkan kode keluarga yang Ayah Bunda miliki di sini</string>
    <string name="vc_in">Masuk</string>
    <string name="vc_no_kk">Belum punya kode keluarga?</string>
    <string name="vc_buy_kk">Beli Kode Keluarga Disini</string>

    <string name="start">Mulai</string>
</resources>