<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingHorizontal="24dp"
    android:background="@color/white3"
    tools:context=".PersonalFormActivity">

    <TextView
        android:id="@+id/labelNickName"
        style="@style/Theme.Latihan3ActivityMonitoring.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fieldNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:layout_marginTop="12dp"
        android:hint="@string/field_ex_name"
        android:inputType="text"
        android:background="@drawable/field_text_line"
        app:layout_constraintTop_toBottomOf="@+id/labelNickName"/>

    <TextView
        android:id="@+id/labelAge"
        style="@style/Theme.Latihan3ActivityMonitoring.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_age"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldNickName" />

    <EditText
        android:id="@+id/fieldAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:hint="@string/field_ex_age"
        android:background="@drawable/field_text_line"
        app:layout_constraintTop_toBottomOf="@+id/labelAge"/>

    <android.widget.Button
        android:id="@+id/btnNext"
        android:onClick="actNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="62dp"
        android:layout_marginVertical="20dp"
        style="@style/Theme.Monitory.Button"
        android:background="@drawable/btn_primary"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>